fix "Save As" functionality in cocoa widgets, also add save type options in save dialog. b=354954 r=smorgan sr=pav